--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
-<!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello World</title>
+		<title>Hello World </title>
 	</head>
 	<body>
 		<h1>Hello World</h1>
-	<body>
-</html>
+		
+		<h2>Bread cat image</h2>
+		<img src="breadcat.jpg" alt="Bread cat">
+		
+		<h2>Music from the game</h2>
+		<audio controls>
+			<source src= "Prophecy.mp3" type="audio/mpeg">
+		</audio>
+		
+		<h2> Video </h2>
+		<video width="320" height="240" controls>
+			<source src="seventh.mp4" type="video/mp4">
+		</video>
+		
+		<h2> iFrame </h2> 
+		<iframe src="https://destinyitemmanager.com/en/" title="Destiny item manager">
+		
+		</iframe>
+		
+		<h2> Youtube </h2> 
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/P0IlFZ61734" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+		</iframe>
+		
+		
+		
+		<h2> Google maps </h2> 
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.57929436579!2d-122.19989848417885!3d47.61486959539953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906c888a968887%3A0x901806ddcbe3e7f6!2s550%20106th%20Ave%20NE%2C%20Bellevue%2C%20WA%2098004!5e0!3m2!1sen!2sus!4v1633570280049!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+		</iframe>
+		
+		
+		
+		
+		
+		
