--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -21,11 +21,12 @@
 		<object data="bungieplz.mp4" width="500" height="420">
 		</object>
 		
-		<h2> What Destiny PVP feels like :) </h2> 
+		<h2> What Destiny PVP feels like :) </h2> <! Added an end time for the video and ?rel=0 to only suggest other vids from this creator>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/osabYDA_OjU?start=180&end=296;?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
+		
+		
 		<h2> Very Important tool for all D2 GAMERS</h2> 
 		<iframe width="400" height="320"src="https://destinyitemmanager.com/en/" title="Destiny item manager">
-		
 		</iframe>
 		
 		<h2> When sad, cry to Bungie HQ :(</h2> 
