--- a/tags.html
+++ b/tags.html
@@ -28,7 +28,7 @@
 				<img src="https://i.kinja-img.com/gawker-media/image/upload/c_fit,f_auto,g_center,pg_1,q_60,w_965/c7143f2d3bc3d4a82d4478c6c67ebf72.jpg" title="Honk moon" style="width:100px;height:100px;margin:5px">
 			</li>
 		</ol>
-		<b> Additional Content</b>
+		<b> Additional Content</b> <!bolds the text/heading>
 		<a href="https://kotaku.com/destiny-2-gets-slightly-unsettling-goose-game-mask-1847854612">
 			<img src="https://i.kinja-img.com/gawker-media/image/upload/c_fit,f_auto,g_center,pg_1,q_60,w_965/c7143f2d3bc3d4a82d4478c6c67ebf72.jpg" title="Honk moon" style="width:100px;height:100px;margin:5px">
 		</a>
